# FreeHands_clean

./: .deepsource.toml  .gitignore  CHANGELOG.md  README.md  README_ASSETS.md  README_SECURITY.md  build.gradle  build.gradle.project  build.ps1  build.sh  build_log_after_fix  build_log_after_fix.txt  build_log_full.txt  detekt.yml  download_gradle_wrapper.ps1  fix_and_build.ps1  fix_icons.ps1  generate_icons.ps1  gradle.properties  gradlew  gradlew.bat  init_gradle_wrapper.ps1  keystore.properties.example  proguard-rules.pro  settings.gradle  setup_full_fix.ps1  setup_full_project.ps1  setup_full_project_with_ai.ps1  setup_gradle.ps1  setup_gradle_wrapper.bat
.github/: dependabot.yml
.github/workflows/: android-ci.yml  android.yml  android_build.yml  android_build_release.yml  build.yml  codeql.yml
.setup_backup_20251025_211419/: backup_rules.xml
app/: build.gradle  proguard-rules.pro
app/schemas/com.freehands.assistant.data.local.AppDatabase/: 1.json
app/src/androidTest/java/com/freehands/assistant/benchmark/: AudioFeatureExtractorBenchmark.kt
app/src/androidTest/java/com/freehands/assistant/utils/: AudioFeatureExtractorBenchmark.kt  AudioFeatureExtractorInstrumentedTest.kt
app/src/androidTest/kotlin/com/freehands/assistant/: SecurityTests.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_processing.cpp  audio_processing.h  fft_util.cpp  mfcc_util.cpp  native-lib.cpp  test_interface.cpp
app/src/main/java/com/freehands/app/: App.kt
app/src/main/java/com/freehands/app/ai/: AIManager.kt
app/src/main/java/com/freehands/app/di/: ViewModelModule.kt
app/src/main/java/com/freehands/assistant/: CommandProcessor.java  FreeHandsApp.kt  VoiceAccessibilityService.java
app/src/main/java/com/freehands/assistant/di/: ActivityModule.kt
app/src/main/java/com/freehands/assistant/presentation/: MainActivity.kt
app/src/main/java/com/freehands/assistant/receiver/: BootCompletedReceiver.kt
app/src/main/java/com/freehands/assistant/service/: CustomSpeechRecognitionService.kt  VoiceInteractionSessionService.kt
app/src/main/java/com/freehands/assistant/utils/: AppConstants.kt  AudioFeatureExtractor.kt  Converters.kt  (+3 more)
app/src/main/java/com/garbe/freehands/: setup_fix_and_ai.ps1
app/src/main/kotlin/com/freehands/assistant/: BootReceiver.java  VoiceBiometricAuthenticator.java  VoiceBiometricAuthenticator.kt  VoiceProfileManager.java  VoiceRecognitionManager.kt  WakeWordDetector.java
app/src/main/res/drawable/: bg_splash.xml  btn_primary.xml  ic_microphone.xml  rounded_bg.xml
app/src/main/res/layout/: activity_audio_test.xml  overlay_voice_command.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-mdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  dimens.xml  shape_appearance.xml  strings.xml  strings_voice.xml  styles.xml  themes.xml  themes_transparent.xml
app/src/main/res/xml/: backup_descriptor.xml  backup_rules.xml  data_extraction_rules.xml  network_security_config.xml  recognition_service.xml  voice_interaction_service.xml  voice_interaction_session_service.xml  voice_interaction_ui.xml
app/src/test/java/com/freehands/assistant/: ExampleUnitTest.kt
app/src/test/kotlin/com/freehands/assistant/: CommandExecutorTests.kt
build-cache/: 01a90627028f8afaf5cb49823bf02c07-11784356132806011511.part  1521b8f0552a6173fca44243987e8933-8728660779032651687.part  1e9bd43edf02bd9b1794a0d46cb1353c-583950214665177573.part  217725647befa5d308a387db601ef653-16961383022950707131.part  220897ef6e5abff9ab1c46f154eae9f5-18442018845357266134.part  285e7368b8c5ff422f26512671334d03-3603600373996852880.part  28eb7a3e161c10faebe801e768b44bae-16294962651176479852.part  324b444919670254b8a47e133588c0b9-6098026461560821463.part  4003f32839c2c9ac919361abfdd7e5a9-6222431295198494467.part  5e249051ad409112b06a496d06de0858-7942167396862007198.part  6a748d44c60222efe0d8583690056c38-8265976336284633687.part  7381e18a879e13a73f782c7e2e771baa-6090277315565000774.part  78fd6b94c2f62e0281da989bd81e685b-10865451179295171087.part  894fa4ea7982d6bfb0e1703f3e7f4f2e-1613079681438205882.part  b040c5c3da565ffa3724868b4eaa2192-2150738036515677025.part  c0a847798fa7b9fd1e3f4c41a9242daa-2269263828846122220.part
docs/: AUDIO_FEATURE_EXTRACTION.md
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/java/com/freehands/assistant/: BootReceiver.kt  FreeHandsApp.kt  MainActivity.java  SystemController.java
src/main/java/com/freehands/assistant/di/: AppModule.kt
src/main/java/com/freehands/assistant/utils/: VoiceCommandProcessor.kt
src/main/res/drawable/: spinner_background.xml
src/main/res/layout/: activity_main.xml
src/main/res/values/: colors.xml  strings.xml
src/main/res/xml/: voice_interaction_service.xml
src/test/java/com/freehands/assistant/: SampleUnitTest.java
src_backup/main/java/com/freehands/assistant/: BaseViewModel.kt  MainViewModel.kt  SecurityManager.java  SecurityManager.kt  SettingsActivity.java  SettingsViewModel.kt  SystemController.kt  VoiceAccessibilityService.kt  VoiceEngine.java  VoiceInteractionService.kt  VoiceListeningService.java  VoiceListeningService.kt  VoiceProfileManager.kt  VoiceViewModel.kt
src_backup/main/java/com/freehands/assistant/data/: Repository.java
src_backup/main/java/com/freehands/assistant/di/: AppComponent.kt  ServiceModule.kt  ViewModelModule.kt
src_backup/main/java/com/freehands/assistant/security/: SecurePrefs.java
src_backup/main/java/com/freehands/assistant/utils/: AudioFeatureExtractor.kt  CrashReportingTree.kt  EncryptionUtils.kt  PermissionManager.kt  PreferencesManager.kt  VoiceFeatureStorage.kt  VoiceRecognitionManager.kt
src_backup/main/res/drawable/: button_background.xml  button_secondary_background.xml  circle_background.xml  rounded_background.xml
src_backup/main/res/layout/: activity_settings.xml
src_backup/main/res/mipmap-mdpi/: ic_launcher.xml
src_backup/main/res/values/: styles.xml
src_backup/main/res/xml/: accessibility_service_config.xml  network_security_config.xml
(+64 files in other folders)
